--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -8,7 +8,10 @@
     <!-- tmpl_if expr="defined(advanced_query) && (total_num > 0)" --> 
         <!-- tmpl_if expr="((root_login == 1) || (list_settings.allow_profile_editing == 1))" --> 
             <div class="text-center">
-                <input type="button" class="show_update_profile_form success bigger_button" value="Update Search Results...">
+                <input 
+					type="button" 
+					class="show_update_profile_form success large button" 
+					value="Update Search Results...">
             </div> 
         <!-- /tmpl_if --> 
     <!-- /tmpl_if --> 
