--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -226,7 +226,7 @@
 				<input 
 					type="button" 
 					value="Customize Your List Invitation Message..." 
-					class="button warning bigger_button show_customize_invite_message"
+					class="button warning large button show_customize_invite_message"
 				>
 			</li>
 		</ul>
