--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -137,7 +137,7 @@
         <div class="small-11 columns">
             <ul class="button-group">
                 
-     		 <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
+     		 <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list') || (type eq 'sub_confirm_list'))" -->
 
              <input type="hidden" name="process" value="delete" >
              <input type="hidden" name="flavor"       value="remove_subscribers" >
@@ -201,7 +201,7 @@
     
         </form>
 		
-        <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
+        <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list') || (type eq 'sub_confirm_list'))" -->
         
             <!-- tmpl_unless query -->
 			    <li>
