--- a/dada/templates/view_list_table_widget.tmpl
+++ b/dada/templates/view_list_table_widget.tmpl
@@ -17,12 +17,14 @@
 		</th>
 	<!-- /tmpl_if --> 
 	
-    <!-- tmpl_if expr="(type eq 'sub_confirm_list')" -->
-    <th>
-		
- 	</th>
-    <!-- /tmpl_if -->
 	
+	<!-- tmpl_if list_settings.enable_closed_loop_opt_in -->
+	    <!-- tmpl_if expr="(type eq 'sub_confirm_list')" -->
+	    <th>
+		
+	 	</th>
+	    <!-- /tmpl_if -->
+	<!-- /tmpl_if -->
 	
    <th>
 		<!-- tmpl_if expr="(order_by ne 'email')" -->
@@ -143,21 +145,22 @@
 			</td>
 		<!-- /tmpl_unless --> 
 
-
-		   <!-- tmpl_if expr="(type eq 'sub_confirm_list')" -->
-		   	<td>
-				<a class="tiny button resend_confirmation_email"
-					title="Resend Confirmation Email"
-					data-list="<!-- tmpl_var list escape="HTML" -->"
-					data-email="<!-- tmpl_var email escape="HTML" -->"
+		   <!-- tmpl_if list_settings.enable_closed_loop_opt_in -->
+			   <!-- tmpl_if expr="(type eq 'sub_confirm_list')" -->
+			   	<td>
+					<a class="tiny button resend_confirmation_email"
+						title="Resend Confirmation Email"
+						data-list="<!-- tmpl_var list escape="HTML" -->"
+						data-email="<!-- tmpl_var email escape="HTML" -->"
 					
-				>
-					<i class="fi-plus"></i>
-					<i class="fi-mail"></i>
-					<i class="fi-arrow-right"></i>
-				</a>
-			</td>
-		   <!-- /tmpl_if -->
+					>
+						<i class="fi-plus"></i>
+						<i class="fi-mail"></i>
+						<i class="fi-arrow-right"></i>
+					</a>
+				</td>
+			   <!-- /tmpl_if -->
+		    <!-- /tmpl_if -->
 
 
 		<!-- tmpl_if show_list_column --> 
