--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -60,13 +60,52 @@
                 </label>
             </div> 
         </div>
+		
         <div class="row">
             <div class="small-12 columns">
-                 <label for="view_list_order_by">Order by:</label>
-                 <!-- tmpl_var view_list_order_by_menu --> 
-                 <!-- tmpl_var view_list_order_by_direction_menu -->
-             </div> 
-         </div>
+                <input 
+					type="checkbox" 
+					name="view_list_show_sub_confirm_list" 
+					id="view_list_show_sub_confirm_list"
+					value="1" 
+					<!-- tmpl_if list_settings.view_list_show_sub_confirm_list -->checked="checked"<!--/tmpl_if-->
+				>
+                <label for="view_list_show_sub_confirm_list">
+                 Show, &quot;Not Yet Confirmed&quot; sublist
+                </label>
+            </div> 
+        </div>
+	    <div class="row">
+	        <div class="small-1 columns">
+	        </div>	
+	        <div class="small-11 columns">
+	        <div class="alert-box info radius">
+			    The <strong>Not Yet Confirmed</strong> sublist are addresses that have submitted their address 
+				to subscribe, but haven't yet confirmed via clicking on the confirmation link in the 
+				email message they were sent.
+			</div>
+		    </div> 
+	    </div>
+		
+
+		
+		
+		
+        <div class="row">
+            <div class="small-12 columns">
+                 <label for="view_list_order_by">Order Subscribers by:</label>
+			 </div>
+		</div>
+		 
+         <div class="row">
+             <div class="medium-6 columns">
+		 		<!-- tmpl_var view_list_order_by_menu --> 
+			</div>
+        	 <div class="medium-6 columns">
+         		<!-- tmpl_var view_list_order_by_direction_menu -->
+     		 </div>
+	 	</div> 
+
     <!-- /tmpl_if --> 
 
 </fieldset>
@@ -93,11 +132,21 @@
     <div class="row">
         <div class="small-12 columns">
         <!-- tmpl_var add_list_import_limit_menu -->
-        <div class="alert-box info radius">
-		    The larger the number, the slower the process
-		</div>
 	    </div> 
     </div>
+	
+    <div class="row">
+	
+    <div class="small-1 columns">
+    </div>	
+    <div class="small-11 columns">
+    <div class="alert-box info radius">
+	    The larger the number, the slower the process
+	</div>
+	</div>	
+	
+	</div>	
+	
 
 
 </fieldset> 
