$VER change and changelog  docs.

--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -1,7 +1,7 @@
 <!-- begin change_info_screen.tmpl -->
 
 
-<!-- tmpl_set name="title" value="Your Mailing List &#187; List Information" -->
+<!-- tmpl_set name="title" value="Mailing List &#187; List Information" -->
 <div id="screen_meta" data-menu_highlight="change_info"></div>
 
 
@@ -9,7 +9,7 @@
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Your Mailing List
+				Mailing List
 			 </a>
 	 	    <a 
 				href="#"
