--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin change_password_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="You Mailing List &#187; List Password" -->
+<!-- tmpl_set name="title" value="Mailing List &#187; List Password" -->
 
 <!-- tmpl_set name="load_jquery_validate" value="1" -->
 
@@ -12,7 +12,7 @@
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Your Mailing List
+				Mailing List
 			 </a>
 	 	    <a 
 				href="#"
