--- a/dada/templates/list_type_switch_widget.tmpl
+++ b/dada/templates/list_type_switch_widget.tmpl
@@ -117,7 +117,7 @@
 				
 						<a href="#" class="change_type" data-type="sub_confirm_list">
 						 <span>
-							Not Yet Confirmed (<!-- tmpl_var sub_confirm_list_num -->)
+							Unconfirmed Subscribers (<!-- tmpl_var sub_confirm_list_num -->)
 						</span>  
 						</a>
 					</li>
