--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -140,7 +140,7 @@
 			<!-- tmpl_if subscribed_to_sub_confirm_list --> 
 				<fieldset>
 					<legend>
-						Not Yet Confirmed
+						Unconfirmed Subscribers
 					</legend>
 					<p>
 						<!-- tmpl_var email escape="HTML" --> has started the process to be subscribed to your mailing list, 
