--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -71,7 +71,7 @@
 					<!-- tmpl_if list_settings.view_list_show_sub_confirm_list -->checked="checked"<!--/tmpl_if-->
 				>
                 <label for="view_list_show_sub_confirm_list">
-                 Show, &quot;Not Yet Confirmed&quot; sublist
+                 Show, &quot;Unconfirmed Subscribers&quot; sublist
                 </label>
             </div> 
         </div>
@@ -80,7 +80,7 @@
 	        </div>	
 	        <div class="small-11 columns">
 	        <div class="alert-box info radius">
-			    The <strong>Not Yet Confirmed</strong> sublist are addresses that have submitted their address 
+			    The <strong>Unconfirmed Subscribers</strong> sublist are addresses that have submitted their address 
 				to subscribe, but haven't yet confirmed via clicking on the confirmation link in the 
 				email message they were sent.
 			</div>
