--- a/dada/templates/web_services.tmpl
+++ b/dada/templates/web_services.tmpl
@@ -1,12 +1,12 @@
 <!-- begin web_services.tmpl --> 
 
-<!-- tmpl_set name="title" value="Your Mailing List &#187; Web Services" -->
+<!-- tmpl_set name="title" value="Mailing List &#187; Web Services" -->
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Your Mailing List
+				Mailing List
 			 </a>
 	 	    <a 
 				href="#"
