Polishing up, and documenting.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1331,13 +1331,18 @@
 
 
 			<label for="configure_mime_tools">
-				<input type="checkbox" name="configure_mime_tools" id="configure_mime_tools" value="1">			
+				<input 
+					type="checkbox" 
+					name="configure_mime_tools" 
+					id="configure_mime_tools" 
+					value="1"
+				>			
 				Configure Email Parsing Engine
 			</label>
 	
-			<div id="configure_mime_tools_options">
+			<div id="mime_tools_options">
 				<div class="panel"> 
-					<h4>Parser Optimiztion</h4>
+					<h4>Parser Optimization</h4>
 					<div class="row">
 						<div class="small-12 columns">
 							<label for="mime_tools_options_tmp_to_core_0">
@@ -1361,7 +1366,7 @@
 									id="mime_tools_options_tmp_to_core_1"
 									value="0"
 								>
-								Parse Messags using Tempory Files
+								Parse Messags using Temporary Files
 							</label>
 							<div class="row">
 								<div class="small-1 columns">
