Changing the URL for Google's CAPTCHA service.

--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -227,7 +227,7 @@
 			<label for="archive_protect_email_recaptcha_mailhide"  <!-- tmpl_unless can_use_recaptcha_mailhide -->class="disabled"<!-- /tmpl_unless -->>
 				reCAPTCHA MailHide
 			</label>
-		    <a href="http://www.google.com/recaptcha/mailhide/" target="_blank">
+		    <a href="https://www.google.com/recaptcha/admin#mailhide" target="_blank">
 		     ?
 		    </a>
 			 <!-- tmpl_unless can_use_recaptcha_mailhide -->    
