--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1939,8 +1939,8 @@
 					<strong>
 					More Information: 
 					</strong>
-					<a href="http://www.google.com/recaptcha/mailhide/" target="_blank">
-					http://www.google.com/recaptcha/mailhide/
+					<a href="https://www.google.com/recaptcha/admin#mailhide" target="_blank">
+					https://www.google.com/recaptcha/admin#mailhide
 					</a>
 
 
