Support for running the scheduled jobs needed periodically after the app is finished running it's main job. This should help things if the cronjob isn't set, set incorrectly, or is inadvertently removed.

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -106,7 +106,8 @@ $FILE_BROWSER_OPTIONS = {
 <!-- tmpl_if configure_scheduled_jobs -->
 $SCHEDULED_JOBS_OPTIONS = { 
    scheduled_jobs_flavor => '<!-- tmpl_var scheduled_jobs_flavor default="_schedules" -->', 
-   log                   =>  <!-- tmpl_var scheduled_jobs_log    default="0" -->, 
+   log                   => <!-- tmpl_var scheduled_jobs_log    default="0" -->, 
+   run_at_teardown       => <!-- tmpl_var scheduled_jobs_run_at_teardown default="0" -->,
 };
 <!-- /tmpl_if -->
 
