--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1089,7 +1089,19 @@
 					<label for="scheduled_jobs_log">
 						<input type="checkbox" name="scheduled_jobs_log" id="scheduled_jobs_log" value="1">			
 						Log Job Output
+					</label>		
+					
+					<label for="scheduled_jobs_run_at_teardown">
+						<input 
+							type="checkbox"
+							name="scheduled_jobs_run_at_teardown"
+							id="scheduled_jobs_run_at_teardown"
+							value="1"
+							checked="checked"
+						>			
+						Run Periodically After App Execution
 					</label>			
+						
 				</div> 
 			</div>
 	
