The Bounce Handler now has save for multiple lists support.

--- a/dada/templates/also_save_for_settings.tmpl
+++ b/dada/templates/also_save_for_settings.tmpl
@@ -1,4 +1,4 @@
-<!-- class="inline-list" -->
+<!-- begin also_save_for_settings.tmpl --> 
 
 <div>
 	<div style="max-height: 375px; overflow: auto;">
@@ -63,3 +63,4 @@
 		</li>
 	</ul>
 
+<!-- end also_save_for_settings.tmpl --> 
