--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -88,7 +88,7 @@
 				type="submit" 
 				 class="button small success" 
 			>
-				<i class="fi-page-export-csv"></i> Download Clickthrough Logs (.csv)
+				<i class="fi-page-export-csv"></i> Export Clickthrough Logs (.csv)
 			</button>
 		</form> 
 	</li>
@@ -101,7 +101,7 @@
 			<button
 			 type="submit" 
 			 class="button small success" >
-			 	<i class="fi-page-export-csv"></i> Download Mass Mailing Event Logs (.csv)
+			 	<i class="fi-page-export-csv"></i> Export Mass Mailing Event Logs (.csv)
 			</button>
 		</form>
 	</li>
