This adds export capabilities to the table you see on the default screen. Hurray!

--- a/dada/templates/plugins/tracker/clickthrough_table.tmpl
+++ b/dada/templates/plugins/tracker/clickthrough_table.tmpl
@@ -48,6 +48,11 @@
 					 &raquo;
 			 	</a>
 			</li>
+			<li>
+				<a href="#" class="tracker_export_page" data-page="<!-- tmpl_var page -->">
+					export page (.csv)
+				</a>
+			</li>
 		</ul>
 	</div>
 <div style="width:100%"> 
