--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -75,7 +75,7 @@
 	
 
 <fieldset> 
- <legend>Export Logs</legend> 
+ <legend>Export Tracker Data (.csv)</legend> 
 
 <ul class="button-group right">
 	<li>
@@ -88,7 +88,7 @@
 				type="submit" 
 				 class="button small success" 
 			>
-				<i class="fi-page-export-csv"></i> Export Clickthrough Logs (.csv)
+				<i class="fi-page-export-csv"></i> Complete Clickthrough Data
 			</button>
 		</form> 
 	</li>
@@ -101,7 +101,7 @@
 			<button
 			 type="submit" 
 			 class="button small success" >
-			 	<i class="fi-page-export-csv"></i> Export Mass Mailing Event Logs (.csv)
+			 	<i class="fi-page-export-csv"></i> Complete Event Data
 			</button>
 		</form>
 	</li>
@@ -110,7 +110,7 @@
 				type="button"
 				class="button small alert tracker_purge_log"
 			>
-				<i class="fi-x"></i> Purge ALL Clickthrough Logs
+				<i class="fi-x"></i> Delete ALL Data
 			</button>
 		</form> 
 	</li>
