--- a/dada/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/templates/plugins/bounce_handler/default.tmpl
@@ -164,7 +164,7 @@
 <div class="row">
 	<div class="small-12 columns">
 		<h4>
-			Addresses the reach the Bounce Score Threshold should:
+			Addresses that reach the Bounce Score Threshold should:
 		</h4>
 	</div>
 </div>
