Aha. so that was the problem!

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -179,6 +179,7 @@ $DEBUG_TRACE = {
     DADA_App_DBIHandle              => <!-- tmpl_var debugging_options_DADA_App_DBIHandle              default="0" -->,
     DADA_App_FormatMessages         => <!-- tmpl_var debugging_options_DADA_App_FormatMessages         default="0" -->,
     DADA_App_Subscriptions          => <!-- tmpl_var debugging_options_DADA_App_Subscriptions          default="0" -->,
+    DADA_App_WebServices            => <!-- tmpl_var debugging_options_DADA_App_WebServices            default="0" -->,
     DADA_Logging_Clickthrough       => <!-- tmpl_var debugging_options_DADA_Logging_Clickthrough       default="0" -->,
     DADA_Mail_MailOut               => <!-- tmpl_var debugging_options_DADA_Mail_MailOut               default="0" -->,
     DADA_Mail_Send                  => <!-- tmpl_var debugging_options_DADA_Mail_Send                  default="0" -->,
