--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1431,7 +1431,8 @@
 	
 			<label for="configure_debugging">
 				<input type="checkbox" name="configure_debugging" id="configure_debugging" value="1">			
-				Configure Debugging
+				Configure 
+				ging
 			</label>
 	
 			<div id="debugging_options">
@@ -1456,6 +1457,18 @@
 						<input type="checkbox" name="debugging_options_DADA_App_Subscriptions" id="debugging_options_DADA_App_Subscriptions" value="1">			
 						DADA::App::Subscriptions
 					</label>
+					
+					<label for="debugging_options_DADA_App_WebServices">
+						<input 
+							type="checkbox" 
+							name="debugging_options_DADA_App_WebServices" 
+							id="debugging_options_DADA_App_WebServices" 
+							value="1"
+						>			
+						DADA::App::WebServices
+					</label>
+					
+					
 
 					<label for="debugging_options_DADA_Logging_Clickthrough">
 						<input type="checkbox" name="debugging_options_DADA_Logging_Clickthrough" id="debugging_options_DADA_Logging_Clickthrough" value="1">			
