--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1431,8 +1431,7 @@
 	
 			<label for="configure_debugging">
 				<input type="checkbox" name="configure_debugging" id="configure_debugging" value="1">			
-				Configure 
-				ging
+				Configure Debugging
 			</label>
 	
 			<div id="debugging_options">
