--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -157,6 +157,11 @@
 					  	</a>
 				  </li>
 			      <li class="tab-title">
+					<a href="#file_attachments">
+						File Attachments
+					</a>
+				  </li>
+			      <li class="tab-title">
 					  <a href="#options">
 						Options
 					  </a>
@@ -191,6 +196,14 @@
 						<div class="content-box section-box">
 		    				<!-- tmpl_include send_url_email_plaintext_message_form_field_widget.tmpl -->
 		    			</div>
+					</div>
+					<a href="#file_attachments" class="show-for-small-only">
+						Attachments
+					</a>
+					<div id="file_attachments" class="content">
+						<div class="content-box section-box">
+		    				<!-- tmpl_include send_email_file_attachments_widget.tmpl -->
+		       		   </div>
 					</div>
 					<a href="#options" class="show-for-small-only">
 						Options
