Working on preview!

--- a/dada/templates/send_email_button_widget.tmpl
+++ b/dada/templates/send_email_button_widget.tmpl
@@ -36,8 +36,7 @@
 					name="process" 
 					id="submit_mass_mailing"
 					value="Save as: Archive"
-				>
-					
+				>					
 			</li>
 		<!-- /tmpl_if --> 
 
@@ -50,8 +49,16 @@
 					id="submit_test_mailing"
 					value="Send Test"
 				>
-					
-				
+			</li>
+			
+			<li>
+				<input 
+					type="button" 
+					class="button small success sendmassmailing preview" 
+					name="process" 
+					id="preview_mass_mailing"
+					value="Preview"
+				>
 			</li>
 			<!-- tmpl_unless archive_no_send -->   
 				<li>
