checking today's work

--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -206,6 +206,91 @@
     </div>
  </div>
 
+
+ <div class="row">
+ 	<div class="large-3 medium-3 columns">
+ 	    <label 
+ 			class="medium-text-right"
+ 			for="logo_image_url"
+ 		>
+			Login Image URL <br>(200px by 50px)
+ 		</label>
+ 	</div>
+ 	<div class="large-9 medium-9 columns">
+      	<input 
+			type="text" 
+			name="logo_image_url" 
+			id="logo_image_url" 
+			value="<!-- tmpl_var list_settings.logo_image_url escape="HTML" -->" 
+			placeholder="https://"
+			>
+     </div>
+  </div>
+  
+  
+
+<div class="row">
+	<div class="large-3 medium-3 columns">
+	    <label 
+			class="medium-text-right"
+			for="facebook_page_url"
+		>
+         	Facebook Page URL
+		</label>
+	</div>
+	<div class="large-9 medium-9 columns">
+     	<input 
+			type="text" 
+			name="facebook_page_url" 
+			id="facebook_page_url" 
+			value="<!-- tmpl_var list_settings.facebook_page_url escape="HTML" -->"
+			placeholder="https://"
+		>
+    </div>
+ </div>
+ 
+<div class="row">
+	<div class="large-3 medium-3 columns">
+	    <label 
+			class="medium-text-right"
+			for="twitter_url"
+		>
+         	Twitter URL
+		</label>
+	</div>
+	<div class="large-9 medium-9 columns">
+     	<input 
+			type="text" 
+			name="twitter_url" 
+			id="twitter_url" 
+			value="<!-- tmpl_var list_settings.twitter_url escape="HTML" -->"
+			placeholder="https://"
+		>
+    </div>
+ </div>
+ 
+ <div class="row">
+ 	<div class="large-3 medium-3 columns">
+ 	    <label 
+ 			class="medium-text-right"
+ 			for="google_plus_page_url"
+ 		>
+          	Google+ Page URL
+ 		</label>
+ 	</div>
+ 	<div class="large-9 medium-9 columns">
+      	<input 
+			type="text" 
+			name="google_plus_page_url" 
+			id="google_plus_page_url" 
+			value="<!-- tmpl_var list_settings.google_plus_page_url escape="HTML" -->" 
+			placeholder="https://"
+			>
+     </div>
+  </div>
+
+ 
+
 <div class="clearfix">
 	<ul class="button-group right">
 	    <li><input type="reset"  class="warning button" value="Clear Changes" ></li>
