Preheader support! All sorts of things! Awesomeness!

--- a/dada/templates/send_email_headers_widget.tmpl
+++ b/dada/templates/send_email_headers_widget.tmpl
@@ -56,11 +56,15 @@
 				</div>
 			</div> 
 		<!-- /tmpl_if --> 
+		
+
 	</div>
   
   
   
-  
+	
+
+
 <div class="row">
 	<div class="large-1 columns">
 		<label for="Subject" class="large-text-right">
@@ -96,6 +100,21 @@
 		<!-- /tmpl_if -->	
 	<!-- /tmpl_if -->
 	</div>
+		</div>
+
+	<div class="row">
+		<div class="large-1 columns">
+			<label for="X-Preheader"  class="large-text-right">
+				Preheader
+			</label>
+		</div> 
+		<div class="large-11 columns">
+			<input type="text" name="X-Preheader" id="X-Preheader" value="">
+		</div>
+	</div>
+	
+	
+
 	
 	<div class="row">
 		<div class="small-1 columns">
