--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -130,11 +130,16 @@
 						  	  PlainText Version
 						  	</a>
 					  </li>
-				      <li class="tab-title">
-						  <a href="#file_attachments">
-							 File Attachments
-						  </a>
-					 	</li>
+						<li class="tab-title">
+							<a href="#file_attachments">
+								Attachments
+							</a>
+						</li>
+						<li class="tab-title">
+							<a href="#layout">
+								Layout
+							</a>
+						</li>
 				      <li class="tab-title">
 						  <a href="#options">
 							Options
@@ -174,6 +179,14 @@
 							</div>
 							<a href="#file_attachments" class="show-for-small-only">
 								Attachments
+							</a>
+							<div id="layout" class="content">
+								<div class="content-box section-box">
+				    				<!-- tmpl_include send_email_layout_widget.tmpl -->
+				       		   </div>
+							</div>
+							<a href="#layout" class="show-for-small-only">
+								Layout
 							</a>
 							<div id="file_attachments" class="content">
 								<div class="content-box section-box">
