--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -161,6 +161,11 @@
 						File Attachments
 					</a>
 				  </li>
+					<li class="tab-title">
+					<a href="#layout">
+						Layout
+					</a>
+					</li>
 			      <li class="tab-title">
 					  <a href="#options">
 						Options
@@ -205,6 +210,15 @@
 		    				<!-- tmpl_include send_email_file_attachments_widget.tmpl -->
 		       		   </div>
 					</div>
+					<a href="#layout" class="show-for-small-only">
+						Layout
+					</a>
+					<div id="file_attachments" class="content">
+						<div class="content-box section-box">
+		    				<!-- tmpl_include send_email_file_attachments_widget.tmpl -->
+		       		   </div>
+					</div>
+					
 					<a href="#options" class="show-for-small-only">
 						Options
 					</a>
