--- a/dada/templates/send_url_email_html_message_form_field_widget.tmpl
+++ b/dada/templates/send_url_email_html_message_form_field_widget.tmpl
@@ -107,7 +107,12 @@
 
 	<div class="row">
 		<div class="small-12 columns">
-		<input type="radio" name="url_options" id="extern" value="extern" checked="checked" >
+		<input 
+			type="radio" 
+			name="url_options" 
+			id="extern" 
+			value="extern" 
+		>
 		<label for="extern">
 			Change Image URLs to Absolute
 		</label> 
@@ -115,7 +120,13 @@
 	</div>
 	<div class="row">
 		<div class="small-12 columns">
-			<input type="radio" name="url_options" value="cid" id="cid" >
+			<input 
+				type="radio" 
+				name="url_options" 
+				value="cid" 
+				id="cid"
+				checked="checked"
+			>
 			<label for="cid">
 				Embed Images in Message
 			</label>
