--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -161,11 +161,11 @@
 						File Attachments
 					</a>
 				  </li>
-					<li class="tab-title">
+				<li class="tab-title">
 					<a href="#layout">
 						Layout
 					</a>
-					</li>
+				</li>
 			      <li class="tab-title">
 					  <a href="#options">
 						Options
@@ -210,16 +210,21 @@
 		    				<!-- tmpl_include send_email_file_attachments_widget.tmpl -->
 		       		   </div>
 					</div>
+					
+					
 					<a href="#layout" class="show-for-small-only">
 						Layout
 					</a>
-					<div id="file_attachments" class="content">
+					<div id="layout" class="content">
 						<div class="content-box section-box">
-		    				<!-- tmpl_include send_email_file_attachments_widget.tmpl -->
+		    				<!-- tmpl_include send_email_layout_widget.tmpl -->
 		       		   </div>
 					</div>
 					
-					<a href="#options" class="show-for-small-only">
+					
+					
+					
+						<a href="#options" class="show-for-small-only">
 						Options
 					</a>
 					<div id="options" class="content">
